--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -2,9 +2,68 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+.f-c{
+  background-color: #eaebef;
+  min-height: 700px;
+  display: flex;
+}
+.f-pfp-b{
+  height: 120px;
+  border: 1px solid #dddfe2;
+  border-top: 0;
+  background-color: white;
+  border-radius: 0 0 2px 2px;
+}
+.f-pfp-h{
+  height: 30px;
+  border: 1px solid #dddfe2;
+  background-color: #f5f6f7;
+  border-radius: 2px 2px 0 0;
+  display: flex;
+  align-items: center;
+}
+.f-php-h-t{
+  margin-left: 7px;
+  font-size: 12px;
+  color: #4b4f56;
+  font-weight: 600px;
+}
+.f-st{
+  margin: 10px 0 0 400px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  background-color: #eaebef;
+}
+.pi-b{
+  margin: 5px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #dddfe2;
+  width: 450px;
+  min-height: 60px;
+}
 .pi-c {
-  margin: 10px;
-  border: 1px black solid;
-  paddinG: 5px;
+  background: white;
+  border: 1px solid #dddfe2;
+  border-radius: 2px;
+  margin: 10px 0;
+  padding: 10px;
+  min-height: 180px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pi-lc {
+  border-bottom: 1px solid #dddfe2;
+  width: 500px;
+}
+
+.c-c {
+  background-color: #e9ebee;
+  height: 30px;
+  width: 420px;
+  border: 1px solid #dddfe2;
+  border-radius: 15px;
+  margin: 10px 0;
 }
