--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -7,14 +7,31 @@
   min-height: 700px;
   display: flex;
 }
-.f-pfp-b{
+.f-php-b{
   height: 120px;
   border: 1px solid #dddfe2;
   border-top: 0;
   background-color: white;
   border-radius: 0 0 2px 2px;
 }
-.f-pfp-h{
+.f-php-bot{
+  height: 40px;
+  border: 1px solid #dddfe2;
+  border-top: none;
+  background-color:#eaebef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 2px 2px;
+}
+.f-php-c{
+  margin-top: 20px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.f-php-h{
   height: 30px;
   border: 1px solid #dddfe2;
   background-color: #f5f6f7;
@@ -26,14 +43,39 @@
   margin-left: 7px;
   font-size: 12px;
   color: #4b4f56;
-  font-weight: 600px;
+  font-weight: bold;
+}
+.f-php-t {
+  border-bottom: 1px solid #dddfe2;
+  width: 450px;
+  height: 80px;
+  padding: 10px;
+  margin-left: 15px;
+  cursor: text;
+}
+.f-php-ta {
+  padding: 10px;
+  color: black;
+  border: none;
+  font-size: 17px;
+  width: 400px;
+  height: 60px;
+  text-align: left;
+  resize: none;
+  outline: none;
+}
+.f-php-tx{
+  padding: 15px 0 0 0;
+  color: #c4c5ccd8;
+  font-size: 13px;
 }
 .f-st{
-  margin: 10px 0 0 400px;
+  margin: 0 0 0 500px;
   width: 500px;
   display: flex;
   flex-direction: column;
   background-color: #eaebef;
+  align-items: center;
 }
 .pi-b{
   margin: 5px;
@@ -47,7 +89,7 @@
   border: 1px solid #dddfe2;
   border-radius: 2px;
   margin: 10px 0;
-  padding: 10px;
+  padding: 0;
   min-height: 180px;
   display: flex;
   flex-direction: column;
@@ -66,4 +108,15 @@
   border: 1px solid #dddfe2;
   border-radius: 15px;
   margin: 10px 0;
+}
+
+.but-p {
+  background-color: #4267b2;
+  border: none;
+  width: 450px;
+  height: 20px;
+  font-size: 14px;
+  color: white;
+  padding: 5px, 5px;
+  border-radius: 2px;
 }
