--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -4,7 +4,7 @@
 
 .f-c{
   background-color: #eaebef;
-  min-height: 700px;
+  min-height: 100vh;
   display: flex;
 }
 .f-php-b{
@@ -95,12 +95,37 @@
   flex-direction: column;
   align-items: center;
 }
-
+.pi-h {
+  display: flex;
+  width: 480px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.pi-h-d {
+  color: #c4c5ccd8;
+  font-size: 12px;
+}
+.pi-h-n {
+  text-decoration: none;
+  color: #4267b2;
+  font-size: 15px;
+  font-weight: 500;
+}
+.pi-h-n:hover {
+  text-decoration: underline #4267b2;
+}
+.pi-hnd {
+  padding-left: 15px;
+}
 .pi-lc {
   border-bottom: 1px solid #dddfe2;
   width: 500px;
 }
-
+.pi-ntn {
+  display: flex;
+  align-items: center;
+}
 .c-c {
   background-color: #e9ebee;
   height: 30px;
@@ -119,4 +144,13 @@
   color: white;
   padding: 5px, 5px;
   border-radius: 2px;
+}
+
+.tri-b {
+  width: 0;
+	height: 0;
+	border-top: 6px solid transparent;
+	border-left: 6px solid #616770;
+  border-bottom: 6px solid transparent;
+  margin: 0 5px;
 }
