Refactored comment querying and styled comment components

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -106,13 +106,13 @@
   color: #c4c5ccd8;
   font-size: 12px;
 }
-.pi-h-n {
+.pi-h-nl {
   text-decoration: none;
   color: #4267b2;
   font-size: 15px;
   font-weight: 500;
 }
-.pi-h-n:hover {
+.pi-h-nl:hover {
   text-decoration: underline #4267b2;
 }
 .pi-hnd {
