--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -13,6 +13,34 @@
   margin: 10px;
  
 }
+.ci-i-b {
+  background-color: #f2f3f5;
+  max-width: 400px;
+  border: none;
+  border-radius: 15px;
+  padding: 8px 10px;
+  margin: 10px;
+  font-size: 13px;
+}
+.ci-i-c {
+  width: 460px;
+  margin: 10px;
+  padding: 0 10px;
+}
+.ci-c {
+  width: 500px;
+  background: white;
+}
+.ci-nl {
+  text-decoration: none;
+  color: #4267b2;
+  font-size: 13px;
+  font-weight: 500;
+  margin-right: 4px;
+}
+.ci-nl:hover {
+  text-decoration: underline #4267b2;
+}
 .c-ta {
   width: 380px;
   height: 20px;
