--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -11,7 +11,6 @@
   align-items: center;
   justify-content: center;
   margin: 10px;
- 
 }
 .ci-i-b {
   display: inline-block;
@@ -21,15 +20,14 @@
   border: none;
   border-radius: 15px;
   padding: 8px 10px;
-  margin: 10px;
+  margin-right: 10px;
   font-size: 13px;
 }
 .ci-i-c {
   display: flex;
-  align-items: center;
-  width: 460px;
-  margin: 10px;
-  padding: 0 10px;
+  flex-direction: column;
+  // align-items: center;
+  width: 480px;
 }
 .ci-c {
   width: 500px;
@@ -87,4 +85,30 @@
   height:15px;
   width: 15px;
   margin-right: 3px;
+}
+
+.comment-cont {
+  display: flex;
+  align-items: center;
+  width: 460px;
+  margin: 10px;
+  padding: 0 10px;
+}
+.comment-cancel {
+  margin-left: 20px;
+  font-size: 10px;
+  color: #4267b2;
+}
+.comment-cancel:hover {
+  cursor: pointer;
+  // text-decoration: 
+}
+.comment-edit {
+  margin-bottom: 0;
+}
+.comment-edit-cont {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: left;
+  margin-left: 10px;
 }
