--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -8,7 +8,7 @@
   display: flex;
 }
 .f-php-b{
-  height: 120px;
+  min-height: 120px;
   border: 1px solid #dddfe2;
   border-top: 0;
   background-color: white;
