--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.file-submit-button {
+  display: none;
+}
+.file-submit-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f2f3f5;
+  height: 30px;
+  width: 120px;
+  border: 1px solid #dddfe2;
+  border-radius: 15px;
+  font-size: 14px;
+  color: #4b4e53;
+  margin: 10px;
+}
+.post-create-b {
+  background: white;
+  padding: 10px;
+  border: 1px solid #dddfe2;
+
+}
