--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -17,9 +17,35 @@
   color: #4b4e53;
   margin: 10px;
 }
-.post-create-b {
+.post-footer-cont{
   background: white;
   padding: 10px;
-  border: 1px solid #dddfe2;
+  border: 0 1px solid #dddfe2;
+}
+.photo-preview{
+  width: 100%;
+  height: 100%;
+}
+.photo-preview-wrap {
+  position: relative;
+  max-width: 100px;
+  max-height: 100px;
+}
 
+.photo-x-cancel {
+  position: absolute;
+  margin-left: 80px;
+  z-index: 4;
+  color: #dddfe2;
+}
+.photo-x-cancel:hover {
+  color: white;
+  cursor: pointer;
+}
+.post-form-cont {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 12;
 }
