--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -49,3 +49,16 @@
   justify-content: center;
   z-index: 12;
 }
+
+.post-prof-image {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.comment-prof-image {
+  height: 32px;
+  width: 32px;
+  border-radius: 100%;
+  overflow: hidden;
+}
