--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -11,6 +11,7 @@
   height: 353px;
   width: 850px;
   background: white;
+  position: relative;
 }
 .wall-main {
   display: flex;
@@ -37,7 +38,10 @@
   height: 310px;
   background-color: lightblue;
   position: relative;
-  
+}
+.wall-cover-pic {
+  width: 100%;
+  height: 100%;
 }
 .wall-header-bar {
   width: 850px;
@@ -49,9 +53,33 @@
 .wall-name {
   position:absolute;
   width:150px;
-  bottom: 20px;
-  left: 20%;
+  bottom: 15px;
+  left: 23%;
   text-align:center;
-  font-size: 20px;
+  font-size: 22px;
   color: white;
+}
+
+.profile-pic-cont{
+  height: 162px;
+  width: 162px;
+  border-radius: 81px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  border: 1px solid #dddfe2;
+  position: absolute;
+  left: 2%;
+  bottom: -8%;
+}
+.profile-circle {
+  height: 156px;
+  width: 156px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.profile-pic {
+  width: 100%;
+  height: 100%;
 }
