--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -142,3 +142,36 @@
   width: 24px;
   cursor: pointer;
 }
+.post-footer-cont{
+  background: white;
+  padding: 10px;
+  border: 0 1px solid #dddfe2;
+}
+.comment-photo-preview-cont {
+  width: 400px;
+  background: white;
+  padding: 10px;
+  border: 1px solid #dddfe2;
+}
+.comment-photo-preview{
+  width: 100%;
+  height: 100%;
+}
+.comment-photo-preview-wrap {
+  position: relative;
+  max-width: 80px;
+  max-height: 80px;
+}
+
+.comment-photo-x-cancel {
+  position: absolute;
+  margin-left: 80px;
+  z-index: 4;
+  color: #77A7FF;
+  background-color: white;
+}
+.comment-photo-x-cancel:hover {
+  color: white;
+  background-color: #77A7FF;
+  cursor: pointer;
+}
