--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -36,7 +36,10 @@
 .wall-cover-p {
   width: 850px;
   height: 310px;
-  background-color: lightblue;
+  background: linear-gradient(white, #dddfe2, rgba(0,0,0, .53));
+  border: 1px solid #dddfe2;
+  // border-color: rgba(0, 0, 0, .25);
+  border-top: none;
   position: relative;
 }
 .wall-cover-pic {
@@ -82,4 +85,12 @@
 .profile-pic {
   width: 100%;
   height: 100%;
+}
+.friend-button {
+  border: 1px solid black;
+  position: absolute;
+  bottom: 15px;
+  right: 20%;
+  height: 20px;
+  background: #f5f6f8;
 }
