--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,12 +10,23 @@
   justify-content: center;
   background-color: #f2f3f5;
   height: 30px;
-  width: 120px;
+  width: 130px;
   border: 1px solid #dddfe2;
   border-radius: 15px;
   font-size: 14px;
   color: #4b4e53;
+  // #f6f7f9
   margin: 10px;
+}
+.file-submit-overlay:hover {
+  cursor: pointer;
+  background-color: #e1e1e1;
+}
+.file-submit-pic{
+  height: 20px;
+  width: 20px;
+  margin-top: 2px;
+  margin-right: 3px;
 }
 .post-footer-cont{
   background: white;
@@ -48,6 +59,7 @@
   flex-direction: column;
   justify-content: center;
   z-index: 12;
+  background: white;
 }
 
 .post-prof-image {
@@ -55,11 +67,5 @@
   width: 40px;
   border-radius: 100%;
   margin-right: 5px;
-  overflow: hidden;
-}
-.comment-prof-image {
-  height: 32px;
-  width: 32px;
-  border-radius: 100%;
   overflow: hidden;
 }
