--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   // align-items: center;
-  width: 480px;
+  width: 500px;
 }
 .ci-c {
   width: 500px;
@@ -180,8 +180,7 @@
   width: 32px;
   border-radius: 100%;
   overflow: hidden;
-  left: 10px;
-  top: 15px;
+  margin-right: 4px;
 }
 .comment-body-dropdown {
   display: flex;
