--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -13,7 +13,7 @@
   border: 1px solid #dddfe2;
   border-top: 0;
   background-color: white;
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 4px 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,12 +21,13 @@
 .f-php-bot{
   height: 40px;
   border: 1px solid #dddfe2;
+  width: 498px;
   border-top: none;
   background-color:#eaebef;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 4px 4px;
 }
 .f-php-c{
   width: 500px;
@@ -38,7 +39,7 @@
   height: 30px;
   border: 1px solid #dddfe2;
   background-color: #f5f6f7;
-  border-radius: 2px 2px 0 0;
+  border-radius: 4px 4px 0 0;
   display: flex;
   align-items: center;
 }
@@ -90,7 +91,7 @@
 .pi-c {
   background: white;
   border: 1px solid #dddfe2;
-  border-radius: 2px;
+  border-radius: 4px;
   margin: 10px 0;
   padding: 0;
   min-height: 180px;
@@ -143,7 +144,7 @@
   font-size: 14px;
   color: white;
   padding: 5px, 5px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 .opacity {
   opacity: 0.2;
