--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -209,25 +209,25 @@
   margin-top: 10px;
   position: relative;
 }
-.post-like-dropdown {
+.like-dropdown {
   background: #282828;
   color: white;
   padding: 7px;
   border-radius: 2px;
 }
-.post-like-dropdown-cont {
+.like-dropdown-cont {
    position: absolute;
   left: 0;
   bottom: 15px;
 }
-.post-like-bold {
+.like-bold {
   font-weight: bold;
   margin: 3px 0;
 }
-.post-like-item {
+.like-item {
   margin: 3px 0;
 }
-.d-tri-g {
+.d-tri-g-p {
   width: 0;
 	height: 0;
 	border-top: 6px solid #282828;
