--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
+  // margin: 10px;
   position: relative;
 }
 .ci-i-b {
@@ -21,7 +21,6 @@
   border: none;
   border-radius: 15px;
   padding: 8px 10px;
-  margin-right: 10px;
   font-size: 13px;
   font-weight: 300;
   position: relative;
@@ -99,6 +98,8 @@
 
 }
 .comment-cancel {
+  // position: absolute;
+  // top: 30px;
   margin-left: 20px;
   font-size: 10px;
   color: #4267b2;
@@ -112,9 +113,9 @@
 }
 .comment-edit-cont {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   width: 500px;
-  margin-left: 10px;
+  margin: 10px;
 }
 
 .comment-button {
@@ -166,7 +167,7 @@
 
 .comment-photo-x-cancel {
   position: absolute;
-  margin-left: 80px;
+  right: 10px;
   z-index: 4;
   color: #77A7FF;
   background-color: white;
@@ -191,12 +192,14 @@
 
 .comment-like-button {
   font-size: 12px;
-  color: #4267b2
+  color: #4267b2;
+  margin-right: 3px;
 }
 .comment-like-button-liked {
   font-size: 12px;
   font-weight: bold;
   color: #77A7FF;
+   margin-right: 3px;
 }
 .comment-like-button:hover,
 .comment-like-button-liked:hover {
@@ -209,7 +212,12 @@
   margin-bottom: 2px;
   margin-top: 10px;
   position: relative;
+  display: flex;
+  align-items: center;
+  background: white;
+  
 }
+
 .d-tri-g-c {
   width: 0;
 	height: 0;
@@ -217,4 +225,65 @@
 	border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   margin: 0 40px;
+}
+.comment-create-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  width: 480px;
+}
+.comment-edit-ta-cont {
+  display: flex;
+  flex-direction: column;
+}
+.comment-body-image-cont {
+  display: flex;
+  flex-direction: column;
+}
+.comment-photo-div {
+  overflow: hidden;
+  border-radius: 10px;
+  margin-right: 5px;
+  
+}
+.comment-create-main {
+  display: flex;
+  align-items: center;
+}
+.comment-photo-preview-cont {
+  margin-top: 10px;
+  position: relative;
+}
+.comment-like-counter {
+  position: absolute;
+  bottom: -8px;
+  right: 15px;
+  height: 20px;
+  width: 40px;
+  background: white;
+  color: #63666b;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2);
+  padding: 2px 1px 2px 2px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+}
+.comment-like-dropdown-cont {
+  position: absolute;
+  right: -25px;
+  bottom: 25px;
+}
+.comment-footer {
+  display: flex;
+  color: #c4c5ccd8;
+  font-size: 12px;
+}
+.comment-footer-time {
+  margin-left: 3px;
+}
+.comment-like-image {
+  height: 18px;
+  width: 18px;
+  margin-right: 3px;
 }
