--- a/app/assets/stylesheets/api/friends.scss
+++ b/app/assets/stylesheets/api/friends.scss
@@ -50,3 +50,51 @@
   display: flex;
   flex-wrap: wrap;
 }
+.friend-button {
+  height: 28px;
+  border: 1px solid black;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  padding: 5px 10px;
+  display: flex; 
+  align-items: center;
+  position: relative;
+}
+.friend-button:hover {
+  cursor: pointer;
+  background-color: #eaebef;
+}
+.friend-text{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 11px;
+  color: #444950;
+}
+
+.friend-dropdown {
+  background: white;
+  color: #444950;
+  border: 1px solid black;
+  padding: 7px;
+  width: 70px;
+  border-radius: 2px;
+}
+.friend-dropdown-cont {
+  position: absolute;
+  left: 0;
+  bottom: -45px;
+}
+
+.d-tri-w-f {
+  width: 0;
+	height: 0;
+	border-top: 6px solid #282828;
+	border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  margin: 0 15px;
+}
+.friend-button-wrap {
+  background: transparent;
+  height: 40px;
+}
