Completed friend functionality, but still need to fix needing to hard refresh to see update

--- a/app/assets/stylesheets/api/friends.scss
+++ b/app/assets/stylesheets/api/friends.scss
@@ -55,7 +55,7 @@
   border: 1px solid black;
   border-radius: 2px;
   background-color: #f5f6f7;
-  padding: 5px 10px;
+  padding: 3px 10px;
   display: flex; 
   align-items: center;
   position: relative;
@@ -70,29 +70,42 @@
   justify-content: space-around;
   font-size: 11px;
   color: #444950;
+  font-weight: bold;
 }
-
+.friend-item {
+  padding: 4px 8px;
+}
+.friend-item:hover{
+  background: #4267b2;
+  color: white;
+}
 .friend-dropdown {
   background: white;
   color: #444950;
   border: 1px solid black;
-  padding: 7px;
-  width: 70px;
+  padding: 5px 0;
+  width: 100px;
   border-radius: 2px;
+  z-index: 2;
 }
 .friend-dropdown-cont {
   position: absolute;
   left: 0;
   bottom: -45px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .d-tri-w-f {
   width: 0;
 	height: 0;
-	border-top: 6px solid #282828;
+	border-bottom: 6px solid white;
 	border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   margin: 0 15px;
+  z-index: 4;
 }
 .friend-button-wrap {
   background: transparent;
