--- a/app/assets/stylesheets/api/feeds.scss
+++ b/app/assets/stylesheets/api/feeds.scss
@@ -35,7 +35,7 @@
 .sidebar-name-link {
   text-decoration: none;
   color: black;
-  font-size: 13x;
+  font-size: 13px;
   font-weight: 500;
 }
 .sidebar-item {
