--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -2,19 +2,42 @@
   width: 200px;
 }
 .nb-sb {
-  width: 400px;
-  height: 20px;
+  width: 350px;
+  height: 22px;
   border-radius: 2px;
   border: none;
+  outline: none;
+  font-size: 14px;
+  padding-left: 5px;
 }
-.nb-tc-n {
+.nb-tc {
+  display: flex;
+  align-items: center;
+}
+.nb-tc-n, .nb-tc-h {
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color:white;
   font-size: 12px;
   border-radius: 2px;
-  padding: 7px 10px;
+  padding: 5px 12px;
+  height: 20px;
   border-right: 1px solid #3a5ca4;
 }
-.nb-tc-n:hover {
+.nb-tc-n {
+  padding-left: 3px;
+}
+.nb-tc-n:hover, .nb-tc-h:hover {
   background: #3b5ca1;
+}
+.nb-fmlogo {
+  height: 25px;
+  width: 25px;
+  margin-right: 7px;
+}
+.nb-s {
+  display: flex;
+  align-items: center;
+  width: 400px;
 }
