--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FbClone</title>
+    <title>Friendmate</title>
+    <link rel="icon" href="favicon.ico">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
