--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -38,9 +38,27 @@
   height: 310px;
   background: linear-gradient(white, #dddfe2, rgba(0,0,0, .53));
   border: 1px solid #dddfe2;
-  // border-color: rgba(0, 0, 0, .25);
   border-top: none;
   position: relative;
+}
+.wall-cover-p-update {
+  display: flex;
+  align-items: center;
+  padding: 2px 5px;
+  position: absolute;
+  top: 15px;
+  left: 20px;
+  width: 160px;
+}
+.wall-cover-p-update:hover {
+  border: 1px solid white;
+  background: #2f2a24;
+  color: white;
+  font-size: 12px;
+  cursor: pointer;
+}
+.wall-cover-p-text {
+  margin-left: 15px;
 }
 .wall-cover-pic {
   width: 100%;
