--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -188,7 +188,7 @@
 .comment-body-dropdown {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 
 .comment-like-button {
