--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -250,3 +250,8 @@
   height: 20px;
   margin-right: 5px;
 }
+.post-edit-button-div {
+  border-top: 1px solid #dddfe2;
+  width: 460px;
+  background: white;
+}
