--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -101,3 +101,12 @@
   padding: 2px 3px;
   border-radius: 2px;
 }
+.navbar-prof-image {
+  height: 24px;
+  width: 24px;
+  border-radius: 100%;
+  overflow: hidden;
+  left: 10px;
+  top: 15px;
+  margin-right: 7px;
+}
