--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -36,10 +36,12 @@
 .wall-cover-p {
   width: 850px;
   height: 310px;
-  background: linear-gradient(white, #dddfe2, rgba(0,0,0, .53));
+  background: linear-gradient(rgba(0,0,0,0) 71%, rgba(0,0,0, .53));
   border: 1px solid #dddfe2;
   border-top: none;
   position: relative;
+  background-position-x: 50%;
+  background-position-y: 20%;
 }
 .wall-cover-p-update {
   display: flex;
@@ -73,12 +75,12 @@
 }
 .wall-name {
   position:absolute;
-  width:150px;
+  width:400px;
   bottom: 15px;
-  left: 23%;
-  text-align:center;
+  left: 200px;
   font-size: 22px;
   color: white;
+  text-shadow: 0 0 3px rgba(0, 0, 0, .8);
 }
 
 .profile-pic-cont{
@@ -201,13 +203,14 @@
   display: flex;
   align-items: center;
   font-size: 12px;
-  color: #4B4F56;
+  color: #4b4f56;
   background: #F5F6F7;
   padding: 0 8px;
   height: 22px;
   border: 1px solid #dddfe2;
   border-radius: 2px;
   cursor: pointer;
+  font-weight: 600;
 }
 .prof-pic-submit {
   display: flex;
