Added friend seeding data

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -52,6 +52,7 @@
   width: 380px;
   height: 20px;
   font-size: 14px;
+  margin-top: 2px;
   background: transparent;
   border: none;
   resize: none;
