Fixed bug where feed/wall with no posts would keep old state

--- a/app/assets/stylesheets/api/friends.scss
+++ b/app/assets/stylesheets/api/friends.scss
@@ -50,6 +50,9 @@
 .friend-pic-name:hover {
   text-decoration: underline #4267b2;
 }
+.friend-pic-name-div {
+  width: 90px;
+}
 .friend-box-index-cont {
   display: flex;
   flex-wrap: wrap;
