--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -22,7 +22,8 @@
 }
 .wall-sidebar {
   width: 320px;
-  height: 320px;
+  min-height: 320px;
+  max-height: 360px;
   background: white;
   border: 1px solid #dddfe2;
   border-radius: 2px; 
