--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -102,7 +102,7 @@
 .comment-cancel {
   // position: absolute;
   // top: 30px;
-  margin-left: 20px;
+  margin-left: 40px;
   font-size: 10px;
   color: #4267b2;
 }
@@ -112,12 +112,15 @@
 }
 .comment-edit {
   margin-bottom: 0;
+  display: inline-block;
 }
 .comment-edit-cont {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
-  width: 500px;
+  width: 480px;
   margin: 10px;
+  margin-left: 5px;
 }
 
 .comment-button {
@@ -233,11 +236,19 @@
   flex-direction: column;
   align-items: center;
   margin: 10px;
+  margin-left: 3px;
   width: 480px;
 }
 .comment-edit-ta-cont {
+  background-color: #f2f3f5;
+  min-height: 30px;
+  width: 420px;
+  border: 1px solid #dddfe2;
+  border-radius: 15px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 .comment-body-image-cont {
   display: flex;
@@ -249,7 +260,9 @@
   margin-right: 5px;
   
 }
-.comment-create-main {
+.comment-create-main, .comment-edit-main {
+  width: 480px;
+  margin-left: 5px;
   display: flex;
   align-items: center;
 }
@@ -299,4 +312,12 @@
 }
 .comment-body-relative {
   position: relative;
+}
+.edit-comment-button {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  right: 10px;
+  top: 6px;
+  margin-left: 15px;
 }
