--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -7,6 +7,7 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 .f-php-b{
   min-height: 120px;
@@ -73,7 +74,22 @@
   font-size: 13px;
 }
 .f-st{
-  // margin: 0 0 0 500px;
+  margin-top: 10px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  background-color: #eaebef;
+  align-items: center;
+}
+.w-st{
+  // position: absolute;
+  // top: 380px;
+  // left: 50%;
+  // width: 500px;
+  // display: flex;
+  // flex-direction: column;
+  // background-color: #eaebef;
+  // align-items: center;
   width: 500px;
   display: flex;
   flex-direction: column;
