--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -154,32 +154,39 @@
   padding: 10px;
   border: 0 1px solid #dddfe2;
 }
-.comment-photo-preview-cont {
+.comment-photo-preview-cont,
+.comment-photo-preview-cont-c {
+  margin-left: 40px;
   width: 400px;
   background: white;
   padding: 10px;
   border: 1px solid #dddfe2;
+  position: relative;
+}
+.comment-photo-preview-cont-c {
+  margin: 5px 0 0 20px ;
 }
 .comment-photo-preview{
-  width: 100%;
-  height: 100%;
+  max-width: 380px;
+  height: auto;
 }
 .comment-photo-preview-wrap {
-  position: relative;
-  max-width: 80px;
-  max-height: 80px;
+  display: inline-block;
+  max-width: 380px;
+  height: auto;
+  background:white;
 }
 
 .comment-photo-x-cancel {
   position: absolute;
-  right: 10px;
+  right: 5px;
+  top: 5px;
   z-index: 4;
   color: #77A7FF;
-  background-color: white;
 }
 .comment-photo-x-cancel:hover {
   color: white;
-  background-color: #77A7FF;
+  background-color: #6185b3;
   cursor: pointer;
 }
 .comment-prof-image {
