--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -52,7 +52,7 @@
 }
 .f-php-t {
   width: 480px;
-  min-height: 80px;
+  // min-height: 80px;
   padding: 10px 0;
   cursor: text;
   display: flex;
@@ -270,4 +270,16 @@
   border-top: 1px solid #dddfe2;
   width: 460px;
   background: white;
+}
+.photo-preview-gray {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: black;
+  opacity: 0;
+  transition:opacity 0.5s ease;
+}
+.photo-preview-gray:hover {
+  opacity: 0.4;
+  transition:opacity 0.5s ease;
 }
