--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -41,12 +41,13 @@
   padding: 5px;
 }
 .photo-preview{
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: 100px;
 }
 .photo-preview-wrap {
+  display: inline-block;
   position: relative;
-  width: 100px;
+  width: auto;
   height: 100px;
   background:white;
 }
@@ -66,9 +67,9 @@
 
 .photo-x-cancel {
   position: absolute;
-  right: 10px;
-  z-index: 4;
-  color: #dddfe2;
+  right: 5px;
+  color: #b8babd;
+  opacity: 1;
 }
 .photo-x-cancel:hover {
   color: white;
