--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -102,7 +102,7 @@
   margin-bottom: 0;
   border-bottom: 1px solid #dddfe2;
   width: 470px;
-
+  font-size: 14px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
