--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -38,7 +38,7 @@
   width: 850px;
   height: 310px;
   background: linear-gradient(rgba(0,0,0,0) 71%, rgba(0,0,0, .53));
-  border: 1px solid #dddfe2;
+  border: 1px solid #939497;
   border-top: none;
   position: relative;
   background-repeat: no-repeat;
@@ -70,11 +70,30 @@
   height: 100%;
 }
 .wall-header-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 850px;
   height: 43px;
   border: 1px solid #dddfe2;
+  border-top: none;
   border-radius: 0 0 2px 2px; 
   background: white;
+}
+.wall-header-bar-timeline, .wall-header-bar-friends {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  width: 80px;
+  color: #4368b3;
+  font-size: 13px;
+  border-left: 1px solid #dddfe2;
+  height: 44px;
+  font-weight: 500;
+}
+.wall-header-bar-friends {
+  border-right: 1px solid #dddfe2;
 }
 .wall-name {
   position:absolute;
@@ -171,7 +190,7 @@
   justify-content: center;
   align-items: center;
   width: 400px;
-  height: 100px;
+  min-height: 100px;
   border: 1px solid #dddfe2;
   border-top: none;
 }
@@ -232,4 +251,22 @@
   color: #90949d;
   font-size: 14px;
   cursor: pointer;
+}
+.profile-preview-cont {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 480px;
+  padding: 5px;
+}
+.profile-preview{
+  width: auto;
+  max-height: 200px;
+}
+.profile-preview-wrap {
+  display: inline-block;
+  position: relative;
+  width: auto;
+  height: 200px;
+  background:white;
 }
