Fixed infinite scroll bug

--- a/app/assets/stylesheets/api/feeds.scss
+++ b/app/assets/stylesheets/api/feeds.scss
@@ -43,6 +43,8 @@
   border: 1px #eaebef solid;
   border-radius: 2px;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
 .sidebar-item-selected {
   display: flex;
