--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -91,6 +91,7 @@
   border-left: 1px solid #dddfe2;
   height: 44px;
   font-weight: 500;
+  text-decoration: none;
 }
 .wall-header-bar-friends {
   border-right: 1px solid #dddfe2;
