--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -91,3 +91,12 @@
   margin-right: 5px;
   overflow: hidden;
 }
+
+.fb-loading {
+  display: flex;
+  justify-content: center;
+}
+
+.no-u{
+  text-decoration: none;
+}
