--- a/app/assets/stylesheets/api/walls.scss
+++ b/app/assets/stylesheets/api/walls.scss
@@ -86,11 +86,11 @@
   justify-content: center;
   padding: 0 10px;
   width: 80px;
-  color: #4368b3;
-  font-size: 13px;
+  color: #385898;
+  font-size: 14px;
   border-left: 1px solid #dddfe2;
   height: 44px;
-  font-weight: 500;
+  font-weight: 550;
   text-decoration: none;
 }
 .wall-header-bar-friends {
